- fixed layout issues with the schedule builder

--- a/RockWeb/Themes/Flat/Styles/theme.css
+++ b/RockWeb/Themes/Flat/Styles/theme.css
@@ -2408,7 +2408,7 @@ td.grid-col-actions {
 .recurrence-pattern-specific-date .actions {
   float: left;
   margin-left: 12px;
-  padding-top: 5px;
+  margin-top: 4px;
 }
 .recurrence-pattern-daily .form-control-group {
   min-height: 30px;
